apps/production/smart-home/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  ports:
    - name: http
      port: 8123
      targetPort: 8123
  clusterIP: None
