apps/production/smart-home/home-assistant/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  type: ExternalName
  externalName: homeassistant.localdomain
  ports:
    - port: 8123
      targetPort: 8123
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`assistant.hejsan.xyz`)
      kind: Rule
      services:
        - name: home-assistant
          port: 8123
  tls:
    secretName: hejsan-xyz-tls
